correction bugs for ADC, erasing datafiles, reset, reboot...

--- a/src/internals/extras/WiFiManager.template.html
+++ b/src/internals/extras/WiFiManager.template.html
@@ -43,7 +43,7 @@
 
 
 			<!-- HTTP_PORTAL_OPTIONS -->
-			<form action=\"/wifi\" method=\"get\"><button>Configure WiFi</button></form><br/><form action=\"/0wifi\" method=\"get\"><button>Configure WiFi (No Scan)</button></form><br/><form action=\"/i\" method=\"get\"><button>Info</button></form><br/><form action=\"/r\" method=\"post\"><button>Reset</button></form>
+			<form action=\"/wifi\" method=\"get\"><button>Configure WiFi</button></form><br/><form action=\"/0wifi\" method=\"get\"><button>Configure WiFi (No Scan)</button></form><br/><form action=\"/i\" method=\"get\"><button>Info</button></form><br/><form action=\"/e\" method=\"post\"><button>!!! Erase Data !!!</button></form><br/><form action=\"/r\" method=\"post\"><button>Reboot</button></form>
 			<!-- /HTTP_PORTAL_OPTIONS -->
 
 			<div><a href='#' onclick='c(this)'>{v}</a> <span class="q {i}">{r}%</span></div>
